[project]
name = "vpplib"
version = "0.0.4"
description = "simulating distributed energy appliances in a virtual power plant"
readme = "README.md"
keywords = ["virtual power plant", "energy system"]
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
authors = [
    { name = "Sascha Birk", email = "pyosch@posteo.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["vpplib"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"GitHub" = "https://github.com/Pyosch/vpplib"