[project]
name = "vpplib"
description = "simulating distributed energy appliances in a virtual power plant"
readme = "README.md"
keywords = ["virtual power plant", "energy system"]
requires-python = ">=3.9"
authors = [
    { name = "Pyosch", email = "pyosch@posteo.de" }
]
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
version = {attr = "vpplib.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["vpplib"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"GitHub" = "https://github.com/Pyosch/vpplib"